Fix "raw types" warnings in ToolEntry
This requires that the class set for the ToolEntry implements the Tool
interface.